<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Custom_CardView_Dialog"
    android:layout_width="match_parent"
    android:background="@drawable/bg_round_corner_10">

    <TextView
        android:id="@+id/tvAlertTitle"
        style="@style/Text_manrope_Semi_Bold_14"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:text="@string/app_delete"
         />

    <TextView
        android:id="@+id/tvAlertDesc"
        style="@style/Text_manrope_Regular_12"
        android:textColor="@color/text_grey"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginVertical="@dimen/_10sdp"
        android:text="@string/app_delete_message" />

    <LinearLayout
        android:id="@+id/llReplace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_70sdp"
        android:paddingHorizontal="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAlertCancel"
                style="@style/Text_manrope_Medium_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_gradient_round_corner_10"
                android:gravity="center"
                android:paddingVertical="@dimen/_7sdp"
                android:text="@string/app_cancel"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:padding="@dimen/_1sdp"
            android:background="@drawable/bg_gradient_round_corner_10"
            android:layout_weight="1">

            <messenger.messages.messaging.sms.chat.meet.views.GradientTextView
                android:id="@+id/tvAlertOk"
                style="@style/Text_manrope_Medium_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_round_corner_10"
                android:gravity="center"
                android:paddingVertical="@dimen/_7sdp"
                android:text="@string/app_delete"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
